crates/rv-gem-specification-yaml/tests/snapshots/round_trip__round_trip_edge_case_generated.snap
---
source: crates/rv-gem-specification-yaml/tests/round_trip.rs
expression: round_trip_yaml
---
---
!ruby/object:Gem::Specification 
name: edge-case-gem
version: !ruby/object:Gem::Version 
  version: 0.1.0.pre
platform: ruby
authors:
  - Edge Developer
autorequire: ~
bindir: bin
cert_chain: []
date: ~
dependencies:
  - !ruby/object:Gem::Dependency 
    name: nokogiri
    requirement: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: 1.13.0
    type: ":runtime"
    prerelease: false
    version_requirements: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: 1.13.0
  - !ruby/object:Gem::Dependency 
    name: zeitwerk
    requirement: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: "2.5"
    type: ":runtime"
    prerelease: false
    version_requirements: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: "2.5"
  - !ruby/object:Gem::Dependency 
    name: dry-types
    requirement: !ruby/object:Gem::Requirement 
      requirements:
        - - ">="
          - !ruby/object:Gem::Version 
            version: "1.5"
        - - "<"
          - !ruby/object:Gem::Version 
            version: "2.0"
    type: ":runtime"
    prerelease: false
    version_requirements: !ruby/object:Gem::Requirement 
      requirements:
        - - ">="
          - !ruby/object:Gem::Version 
            version: "1.5"
        - - "<"
          - !ruby/object:Gem::Version 
            version: "2.0"
  - !ruby/object:Gem::Dependency 
    name: activesupport
    requirement: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: 7.0.0
        - - ">="
          - !ruby/object:Gem::Version 
            version: 7.0.4
    type: ":runtime"
    prerelease: false
    version_requirements: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: 7.0.0
        - - ">="
          - !ruby/object:Gem::Version 
            version: 7.0.4
  - !ruby/object:Gem::Dependency 
    name: minitest
    requirement: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: "5.0"
    type: ":development"
    prerelease: false
    version_requirements: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: "5.0"
  - !ruby/object:Gem::Dependency 
    name: rubocop
    requirement: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: "1.50"
        - - ">="
          - !ruby/object:Gem::Version 
            version: 1.50.2
    type: ":development"
    prerelease: false
    version_requirements: !ruby/object:Gem::Requirement 
      requirements:
        - - ~>
          - !ruby/object:Gem::Version 
            version: "1.50"
        - - ">="
          - !ruby/object:Gem::Version 
            version: 1.50.2
email: []
executables: []
extensions: []
extra_rdoc_files: []
files: []
licenses: []
metadata: {}
post_install_message: ~
rdoc_options: []
require_paths:
  - lib
required_ruby_version: !ruby/object:Gem::Requirement 
  requirements:
    - - ~>
      - !ruby/object:Gem::Version 
        version: "3.0"
required_rubygems_version: !ruby/object:Gem::Requirement 
  requirements:
    - - ~>
      - !ruby/object:Gem::Version 
        version: "3.3"
requirements: []
rubygems_version: 3.4.20
signing_key: ~
specification_version: 4
summary: Testing edge cases
test_files: []
