crates/rv-gem-specification-yaml/tests/snapshots/round_trip__round_trip_simple_generated.snap
---
source: crates/rv-gem-specification-yaml/tests/round_trip.rs
expression: round_trip_yaml
---
---
!ruby/object:Gem::Specification 
name: simple-gem
version: !ruby/object:Gem::Version 
  version: 1.0.0
platform: ruby
authors:
  - Test Author
autorequire: ~
bindir: bin
cert_chain: []
date: ~
dependencies: []
description: This is a simple gem specification for testing YAML serialization
email:
  - test@example.com
executables: []
extensions: []
extra_rdoc_files: []
files: []
homepage: "https://example.com/simple-gem"
licenses:
  - MIT
metadata: {}
post_install_message: ~
rdoc_options: []
require_paths:
  - lib
required_ruby_version: !ruby/object:Gem::Requirement 
  requirements:
    - - ">="
      - !ruby/object:Gem::Version 
        version: 2.7.0
required_rubygems_version: !ruby/object:Gem::Requirement 
  requirements:
    - - ">="
      - !ruby/object:Gem::Version 
        version: "0"
requirements: []
rubygems_version: 3.4.20
signing_key: ~
specification_version: 4
summary: A simple gem for testing
test_files: []
